[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs",
  "storage-proofs/core",
  "storage-proofs/porep",
  "storage-proofs/post",
  "fil-proofs-tooling",
  "sha2raw"
]

#[patch.crates-io]
#bellperson = { git = "https://github.com/Krysme/bellperson" }
#bellperson = { path = "/home/gzhao/go/src/github.com/filecoin-project/my/my-bellman" }
#neptune = { path = "/home/gzhao/go/src/github.com/filecoin-project/my/my-neptune" }

[patch.crates-io]
bellperson = { path = "../my-bellman" }
neptune = { path = "../my-neptune" }
phase21 = { git = "https://github.com/Krysme/phase2" }
