[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
]

[patch.crates-io]
bellperson = { git = "https://github.com/15012700225/my-bellman", branch = "version-0.14.2" }
merkletree = { git = "https://github.com/Krysme/merkletree" }
